kubernetes/chat.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5005
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: rapkeb/chat:1.4
        ports:
        - containerPort: 5005
