kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: hello
    tier: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      tier: frontend
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: rapkeb/stock_frontend:11.6
          ports:
            - containerPort: 80
