kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /front/(.+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /back/(.+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /db/(.+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: db
            port:
              number: 80
